# RemoteCredentialProvider

./: .gitignore  Cargo.toml  Unregister.reg  readme.md  register.reg
helpers/: Cargo.toml
helpers/src/: lib.rs  strings.rs
remote_credential_provider/: Cargo.toml
remote_credential_provider/src/: lib.rs  remote_credential.rs  remote_credential_provider.rs
src/: RemoteCredentialProvider.code-workspace  helpers.rs  lib.rs  remote_credential.rs  remote_credential_provider.rs  strings.rs
