[package]
name = "remote_credential_provider"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helpers = {path="../helpers"}

[dependencies.windows]
version = "0.46.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "implement",
    "Win32_Graphics_Gdi",
    "Win32_Security_Credentials",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Storage_EnhancedStorage",
    "Win32_Security_Authentication_Identity",
    "Win32_System_Kernel",
]